NOFC-sprecific mods and merges

--- a/pos/is4c-nf/scale-drivers/drivers/NewMagellan/ports.conf
+++ b/pos/is4c-nf/scale-drivers/drivers/NewMagellan/ports.conf
@@ -19,7 +19,7 @@
 /dev/ttyS0 SPH_Magellan_Scale
 
 # typical linux config, USB IDtech
-/dev/hidraw0	SPH_SignAndPay_USB
+#/dev/hidraw0	SPH_SignAndPay_USB
 
 # typical linux config, Printer (experimental)
 #/dev/lp0 SPH_Parallel_Writer
